kubernetes/app_configuration/task_2/service-secure.yaml
apiVersion: v1
kind: Service
metadata:
  name: secure-web-service
spec:
  selector:
    app: secure-web-app
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
      name: web
